--- a/recettes.css
+++ b/recettes.css
@@ -24,6 +24,10 @@ h1 {
     text-transform: uppercase;
 }
 
+img {
+    width: 100%;
+}
+
 h3 {
     text-decoration: underline;
     font-weight: 100;
